[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/game_scene_3d.gd" id="1"]
[ext_resource type="Script" path="res://scripts/camera_controller_3d.gd" id="2"]
[ext_resource type="Script" path="res://scripts/player_manager_3d.gd" id="3"]
[ext_resource type="Script" path="res://scripts/multiplayer_sync_3d.gd" id="4"]
[ext_resource type="Script" path="res://scripts/ui_overlay_3d.gd" id="5"]
[ext_resource type="Environment" path="res://assets/environment/default_env_3d.tres" id="6"]

[sub_resource type="BoxMesh" id="1"]
size = Vector3(20, 0.2, 20)

[node name="GameScene3D" type="Node3D"]
script = ExtResource("1")

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 10)
light_energy = 1.0
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="Environment"]

[node name="GroundMesh" type="MeshInstance3D" parent="Environment/Ground"]
mesh = SubResource("1")

[node name="GroundCollision" type="CollisionShape3D" parent="Environment/Ground"]
shape = SubResource("1")

[node name="CameraController" type="Node3D" parent="."]
script = ExtResource("2")

[node name="PlayerManager" type="Node3D" parent="."]
script = ExtResource("3")

[node name="EnemyManager" type="Node3D" parent="."]

[node name="EnvironmentManager" type="Node3D" parent="."]

[node name="MultiplayerSync" type="Node" parent="."]
script = ExtResource("4")

[node name="UIOverlay" type="CanvasLayer" parent="."]
script = ExtResource("5")

[node name="UIContainer" type="Control" parent="UIOverlay"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="StatusPanel" type="Panel" parent="UIOverlay/UIContainer"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 140.0

[node name="HealthBar" type="ProgressBar" parent="UIOverlay/UIContainer/StatusPanel"]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 40.0
value = 100.0
show_percentage = false

[node name="ExperienceBar" type="ProgressBar" parent="UIOverlay/UIContainer/StatusPanel"]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = 70.0
show_percentage = false

[node name="WaveLabel" type="Label" parent="UIOverlay/UIContainer/StatusPanel"]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 100.0
text = "Wave: 1"
horizontal_alignment = 1

[node name="PlayersPanel" type="Panel" parent="UIOverlay/UIContainer"]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 320.0

[node name="PlayerList" type="VBoxContainer" parent="UIOverlay/UIContainer/PlayersPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = -10.0

[node name="MinimapPanel" type="Panel" parent="UIOverlay/UIContainer"]
layout_mode = 0
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -220.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Minimap" type="Control" parent="UIOverlay/UIContainer/MinimapPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InventoryPanel" type="Panel" parent="UIOverlay/UIContainer"]
layout_mode = 0
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
visible = false

[node name="SkillsPanel" type="Panel" parent="UIOverlay/UIContainer"]
layout_mode = 0
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
visible = false

[node name="MenuPanel" type="Panel" parent="UIOverlay/UIContainer"]
layout_mode = 0
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
visible = false

[node name="Notifications" type="Control" parent="UIOverlay/UIContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="WaveNotification" type="Label" parent="UIOverlay/UIContainer/Notifications"]
layout_mode = 0
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = -150.0
text = ""
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="GameOverPanel" type="Panel" parent="UIOverlay/UIContainer"]
layout_mode = 0
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
visible = false
